overflow issue fixed

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -5,25 +5,18 @@
   padding: 0;
 }
 
-body{
-  width: 100vw;
-  height: 100vh;
-}
 
 
 /* two containers for white an dark mode  */
 
 .container-dark {
   background: hsl(207, 26%, 17%);
-  width: 100vw;
-  height: 100%;
   min-height: 100vh;
   min-width: 100vw;
+  overflow: hidden;
 }
 
 .container-white{
-  width: 100vw;
-  height: 100%;
   background: hsl(0, 0%, 98%);
   min-height: 100vh;
   min-width: 100vw;
